[project]
name = "book-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.25.2",
    "ipywidgets>=8.1.6",
    "kagglehub>=0.3.11",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "transformers>=4.51.3",
]
